# aplicacao-django

./: .coverage  .gitignore  DATABASE_POPULATION.md  Dockerfile  README.md  Readme.md  TESTING.md  build.sh  codigos-mysql-disciplinas.txt  codigos-mysql-habilidades.txt  codigos-mysql-turma.txt  codigos-sql  cores.txt  entrypoint.sh  fly.toml  main.py  manage.py  passos-executados-na-reescrita-da-aplicacao.txt  passos.txt  po.py  populate_db.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  sitemap.xml  test_db_path.sh
.github/workflows/: ci-cd.yml  test.yml
gerenciaAula/: admin.py  apps.py
gerenciaAula/forms/: EditUserForm.py  LoginForm.py  RegistrationForm.py  __init__.py
gerenciaAula/migrations/: 0001_initial.py
gerenciaAula/models/: Aula.py  Disciplina.py  Habilidade.py  Turma.py  Usuario.py  __init__.py
gerenciaAula/templates/: base.html  robots.txt  sitemap.xml
gerenciaAula/templatetags/: split_word.py
gerenciaAula/urls/: AboutUsUrl.py  AnalisesUrl.py  CadastraAulaUrl.py  IndexUrl.py  LoginUrl.py  LogoutUrl.py  MaisInfoUrl.py  (+6 more)
pi/: models.py  views.py
pi-2023-zero/: manage.py
projeto/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
settings/: settings.py  testing.py
templates/: about-us.html  base.html  cadastro.html  footer-modelo.html  footer.html  header.html  home.html  index.html  index.html.bkp  listagens.html  login.html  pagina-modelo.html  signup.html
tests/: __init__.py  conftest.py  test password_force.py  test_forms.py  test_integration.py  test_models.py  test_password_force.py  test_urls.py  test_views.py
(+102 files in other folders)
